Fixes day highlight alignment

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -65,10 +65,6 @@
 	fill-opacity: 1;
 }
 
-#date-day.primary {
-	font-family: SevilleSharp-Regular;
-}
-
 .secondary {
 	fill-opacity: 0.7;
 }
